# rust_serverless_backend

./: .gitignore  Cargo.toml
.github/workflows/: deploy-dev.yaml
deploy/: denylist.tf  lambda.tf  main.tf  role.tf  user_db.tf  vars.tf
src/: lib.rs  main.rs
src/dynamo/: mod.rs  models.rs  tables.rs
src/stripe_utils/: mod.rs
src/v1/: mod.rs
src/v1/auth/: jwt.rs  middleware.rs  mod.rs  models.rs  password.rs
src/v1/protected/: mod.rs
src/v1/protected/payment/: mod.rs  models.rs
src/v1/protected/user/: mod.rs  models.rs
src/v1/webhooks/: mod.rs
