[package]
name = "rust-serverless-backend"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
rust-argon2 = "1.0"
actix-web = "4"
lambda-web = { version = "0.2.0", features=["actix4"] }
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
serde_json = "1.0.85"
serde = {version = "1.0.144", features = ["derive"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_24"] }
rand = "0.8.5"
env_logger = "0.10.0"
utoipa = "3.1.0"
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
jsonwebtoken = "8"
chrono = "0.4.24"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

# Makes binary smaller
[profile.release]
panic = 'abort'